--- a/Sample.html
+++ b/Sample.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-h1{font-weight: bold;
-   font-family:'Courier New'}
-h2{font-weight: bold;
-   font-family:'sans-serif'}
-h3{font-weight: bold;
-   font-family:'cursive'}
-a{font-color: 'red';
-   font-family:'cursive'}
-</style>
-
 <title>Sample Page</title>
 </head>
 <body>
 <h1>This is a heading</h1>
 <h2>Hmm!!!! This is also a heading</h2>
 <h3>Yep It is also a heading</h3>
-<br><br>
+<br>
+ <marquee bgcolor="#cccccc" loop="-1" scrollamount="5" width="100%">This is an example for Marquee</marquee>
 <mark>THIS IS A HIGHLIGHTED TEXT</mark><br>
 <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Do not CLICK!!!!</a><br><br>
 
