--- a/TT.html
+++ b/TT.html
@@ -1,10 +1,6 @@
 <html>
 <head>
-<style>
-body {
-  font-family: 'Courier New', monospace;
-}
-</style><title>Time Table</title>
+<title>Time Table</title>
 </head>
 <body>
 
